--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-auth": "^3.13.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
